# smarthealthscan

./: .gitignore  CNAME  main.py  pyproject.toml  rag.py  requirement.txt  requirements.txt  vercel.json
api/: db.py  index.py  rag.py
backend/: app.py  bill.json  db.py  masteruijson.py  pyproject.toml  rag.py
frontend/: index.py
