[project]
name = "smarthealthscan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deskew>=1.5.3",
    "e>=1.4.5",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.32",
    "langchain-pinecone>=0.2.12",
    "langserve>=0.3.1",
    "opencv-python>=4.12.0.88",
    "pdf2image>=1.17.0",
    "pdfminer>=20191125",
    "pdfminer-six>=20221105",
    "pillow>=10.0.0",
    "pinecone>=7.3.0",
    "pymupdf>=1.22.5",
    "pypdf>=6.0.0",
    "pytesseract>=0.3.10",
    "python-docx>=0.8.11",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sentence-transformers>=2.2.2",
    "sse-starlette>=3.0.2",
    "streamlit>=1.49.1",
    "torch>=2.1.0",
    "tqdm>=4.65.0",
    "transformers>=4.40.0",
    "unstructured==0.10.30",
    "unstructured-inference>=1.0.5",
    "unstructured-pytesseract>=0.3.15",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    "imageRAG",
]
